# backpack-example

./: .gitignore  Makefile  README.md  cabal.project
core/: hasktorch-core.cabal
core/classes/Torch/Class/Tensor/: Copy.hs
core/core-classes/Torch/Class/Tensor/: Copy.hs
core/core-indef/Torch/Core/: Tensor.hs
core/indef/Torch/Core/: Tensor.hs
examples/: hasktorch-examples.cabal
examples/copy/: Main.hs
raw/: hasktorch-raw.cabal
raw-signatures/: hasktorch-raw-signatures.cabal
raw-signatures/src/: TensorCopy.hsig
raw-types/: hasktorch-raw-types.cabal
raw-types/src/: THTypes.hs
