name:           hasktorch-core
version:        0.1.0.0
synopsis:       Torch for tensors and neural networks in Haskell
description:    core tensor abstractions wrapping raw TH bindings
category:       Tensors, Machine Learning
homepage:       https://github.com/hasktorch/hasktorch#readme
bug-reports:    https://github.com/hasktorch/hasktorch/issues
author:         Austin Huang
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/hasktorch/hasktorch

library hasktorch-core
  hs-source-dirs:
      src
      src/generic
  ghc-options: -fno-cse -fno-full-laziness
  build-depends:
      base               >=4.7 && <5
    , containers
    , deepseq            >=1.3.0.0
    , dimensions         >=0.3.2.0
    , hasktorch-raw
    , managed            >=1.0.0 && <1.1
    , microlens          >=0.4.8.1
    , numeric-limits
    , safe-exceptions    >=0.1.0.0
    , singletons         >=2.2
    , text               >=1.2.2.2
    , typelits-witnesses >=0.2.3.0

  -- reexported-modules:
  --     THTensorDouble as Tensor
  -- mixins:
  --     hasktorch-raw (THDoubleTensor as Tensor)

  exposed-modules:
      Torch.Core.Exceptions
      Torch.Core.Internal
      Torch.Core.LogAdd
      Torch.Core.Random
      Torch.Core.StorageTypes
      Torch.Core.Tensor.Dim
      Torch.Core.Tensor.Types
      Torch.Raw.Tensor.Generic
      Torch.Core.StorageDouble
      Torch.Core.StorageLong
      Torch.Core.Tensor
      Torch.Core.Tensor.Dynamic.Double
      Torch.Core.Tensor.Dynamic.DoubleMath
      Torch.Core.Tensor.Dynamic.DoubleRandom
      Torch.Core.Tensor.Dynamic.Float
      Torch.Core.Tensor.Dynamic.Generic
      Torch.Core.Tensor.Dynamic.GenericLapack
      Torch.Core.Tensor.Dynamic.Long
      Torch.Core.Tensor.Static.Byte
      Torch.Core.Tensor.Static.Double
      Torch.Core.Tensor.Static.DoubleLapack
      Torch.Core.Tensor.Static.DoubleMath
      Torch.Core.Tensor.Static.DoubleRandom
      Torch.Core.Tensor.Static.Float
      Torch.Core.Tensor.Static.FloatMath
      Torch.Core.Tensor.Static.Generic
      Torch.Core.Tensor.Static.Long
  other-modules:
      Paths_hasktorch_core
  default-language: Haskell2010



-- test-suite spec
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   hs-source-dirs:
--       tests
--       tests/generic
--   ghc-options: -fno-cse -fno-full-laziness
--   build-depends:
--       QuickCheck
--     , base >=4.7 && <5
--     , containers
--     , deepseq >=1.3.0.0
--     , dimensions >=0.3.2.0
--     , hasktorch-core
--     , hasktorch-raw
--     , hspec
--     , managed >=1.0.0 && <1.1
--     , microlens >=0.4.8.1
--     , numeric-limits
--     , safe-exceptions >=0.1.0.0
--     , singletons >=2.2
--     , text >=1.2.2.2
--     , typelits-witnesses >=0.2.3.0
--   other-modules:
--       GarbageCollectionSpec
--       MemorySpec
--       Orphans
--       RawLapackSVDSpec
--       Torch.Core.LogAddSpec
--       Torch.Core.RandomSpec
--       Torch.Core.Tensor.GenericSpec
--       Torch.Prelude.Extras
--       Torch.Core.Tensor.Dynamic.DoubleMathSpec
--       Torch.Core.Tensor.Dynamic.DoubleRandomSpec
--       Torch.Core.Tensor.Dynamic.DoubleSpec
--       Torch.Core.Tensor.Dynamic.GenericLapackSpec
--       Torch.Core.Tensor.Static.ByteSpec
--       Torch.Core.Tensor.Static.DoubleLapackSpec
--       Torch.Core.Tensor.Static.DoubleMathSpec
--       Torch.Core.Tensor.Static.DoubleRandomSpec
--       Torch.Core.Tensor.Static.DoubleSpec
--       Paths_hasktorch_core
--   default-language: Haskell2010
