name:           hasktorch-core
version:        0.1.0.0
synopsis:       Torch for tensors and neural networks in Haskell (backpack example)
description:    core tensor abstractions wrapping raw TH bindings with backpack
category:       Tensors, Machine Learning
homepage:       https://github.com/hasktorch/backpack-example#readme
author:         Sam Stites <sam@stites.io>
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/hasktorch/backpack-example

library
  default-language: Haskell2010
  build-depends: base >=4.7 && <5, hasktorch-raw
  hs-source-dirs: indef, classes
  reexported-modules:
      THLongTensorCopy
    , THFloatTensorCopy
  exposed-modules:
      Torch.Core.Tensor
    , Torch.Class.Tensor.Copy

