name:          hasktorch-raw-signatures
version:       0.1.0.0
synopsis:      Torch for tensors and neural networks in Haskell (backpack prototype)
description:   core C bindings with backpack
homepage:      https://github.com/hasktorch/backpack-example#readme
license:       BSD3
author:        Sam Stites<sam@stites.io>
build-type:    Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  default-language: Haskell2010
  signatures:
      TensorCopy
  build-depends:
      base >= 4.7 && < 5
    , hasktorch-raw-types

