name:          hasktorch-raw
version:       0.1.0.0
synopsis:      Torch for tensors and neural networks in Haskell (backpack prototype)
description:   core C bindings with backpack
homepage:      https://github.com/hasktorch/backpack-example#readme
license:       BSD3
author:        Sam Stites<sam@stites.io>
build-type:    Simple
cabal-version: >=1.10

library
  reexported-modules:
      THTypes
    , TorchStructs
    , THFloatTensorCopy
    , THLongTensorCopy

  build-depends:
      hasktorch-raw-types
    , hasktorch-raw-generated
    , hasktorch-raw-signatures


library hasktorch-raw-types
  hs-source-dirs: types
  default-language: Haskell2010
  exposed-modules:
      THTypes
    , TorchStructs

  build-depends:
      base >= 4.7 && < 5
    , text >= 1.2.2.2

library hasktorch-raw-signatures
  hs-source-dirs: signatures
  default-language: Haskell2010
  signatures:
      TensorCopy
  build-depends:
      base >= 4.7 && < 5
    , hasktorch-raw-types

library hasktorch-raw-generated
  hs-source-dirs: generated
  default-language: Haskell2010
  exposed-modules:
      THFloatTensorCopy
    , THLongTensorCopy

  build-depends:
      base >= 4.7 && < 5
    , inline-c >= 0.5
    , hasktorch-raw-signatures
    , hasktorch-raw-types


  Build-tools:
      c2hs

source-repository head
  type:     git
  location: https://github.com/hasktorch/backpack-example
