name:          hasktorch-raw
version:       0.1.0.0
synopsis:      Torch for tensors and neural networks in Haskell (backpack prototype)
description:   core C bindings with backpack
homepage:      https://github.com/hasktorch/backpack-example#readme
license:       BSD3
author:        Sam Stites<sam@stites.io>
build-type:    Simple
cabal-version: >=1.10

library
  default-language: Haskell2010
  signatures:
      TensorCopy

  exposed-modules:
      THTypes
    , TorchStructs
    , THFloatTensorCopy
    , THLongTensorCopy

  build-depends:
      base >= 4.7 && < 5
    , text >= 1.2.2.2
    , inline-c >= 0.5
  hs-source-dirs:
      types
    , signatures
    , generated

  Build-tools:
      c2hs

source-repository head
  type:     git
  location: https://github.com/hasktorch/backpack-example
