name:          hasktorch-raw
version:       0.1.0.0
synopsis:      Torch for tensors and neural networks in Haskell (backpack prototype)
description:   core C bindings with backpack
homepage:      https://github.com/hasktorch/backpack-example#readme
license:       BSD3
author:        Sam Stites<sam@stites.io>
build-type:    Simple
cabal-version: >=1.10

library
  Build-tools: c2hs
  hs-source-dirs: generated
  exposed-modules:
      THFloatTensorCopy
    , THLongTensorCopy

  reexported-modules:
      THTypes
    , TorchStructs

  build-depends:
      base >= 4.7 && < 5
    , inline-c >= 0.5
    , hasktorch-raw-types


